# event_commander

./: .gitignore  Cargo.toml  README.md  build.sh  release.md
.cargo/: config.toml
src/: app_state.rs  event_api.rs  event_parser.rs  handlers.rs  helpers.rs  main.rs  main.rs.bak  models.rs  terminal.rs  ui.rs
