[package]
name = "event_commander"
version = "1.0.3"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
ratatui = { version = "0.26.3", features = ["crossterm"] }
quick-xml = { version = "0.31", features = ["serialize"] }
windows = { version = "0.56.0", features = ["Win32_Foundation", "Win32_System_EventLog"] }
crossterm = "0.27.0"
chrono = "0.4"
lazy_static = "1.4.0"

[profile.release]
opt-level = 'z' 
lto = true
codegen-units = 1
panic = 'abort'
strip = true   
